# test_gstreamer

./: CMakeLists.txt  basic-tutorial-2.cpp  hello.cpp  playback-tutorial-1.cpp  playback-tutorial-2.cpp  playback-tutorial-3.cpp
src/: hello.cpp
